--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfólio de desenvolvedor full stack com React, TypeScript e Node.js" />
-    <meta name="theme-color" content="#0B1220" />
+    <meta name="theme-color" content="#0A0E1A" />
     <title>Thomas Dev - Portfólio</title>
   </head>
   <body>
